--- a/Editor/UI/UXML/AssetBundleChecker.uxml
+++ b/Editor/UI/UXML/AssetBundleChecker.uxml
@@ -1,10 +1,16 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements">
-    <uie:Toolbar name="Header" style="flex-direction: row;">
+    <ui:VisualElement style="flex-shrink: 0; margin-bottom: 10px;">
+        <ui:Label text="AssetBundleLoad" />
+        <ui:VisualElement style="flex-direction: row; flex-shrink: 0; padding-bottom: 5px;">
+            <ui:Button text="Load Asset Bundle" name="LoadAssetBundle" style="width: 140px; margin-right: 10px;" />
+            <ui:Button text="DumpAllShader" name="DumpAllShader" style="width: 100px;" />
+            <ui:Button text="UnloadAll" name="UnloadAll" style="width: 100px; margin-left: 40px;" />
+        </ui:VisualElement>
+    </ui:VisualElement>
+    <uie:Toolbar name="Header" style="flex-direction: row; flex-shrink: 0;">
         <uie:ToolbarButton text="Assets" name="Assets" />
         <uie:ToolbarButton text="Shaders" name="Shaders" />
         <uie:ToolbarButton text="ShaderVariants" name="ShaderVariants" />
     </uie:Toolbar>
-    <ui:ScrollView name="AssetBundleItemBody" />
-    <ui:ScrollView name="ShaderItemBody" />
-    <ui:ScrollView name="VariantsItemBody" />
+    <ui:VisualElement name="BodyItems" style="overflow: hidden;" />
 </ui:UXML>
