--- a/Editor/UI/UXML/AssetBundleChecker.uxml
+++ b/Editor/UI/UXML/AssetBundleChecker.uxml
@@ -1,6 +1,9 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements">
     <ui:VisualElement style="flex-shrink: 0; margin-bottom: 10px;">
         <ui:Label text="AssetBundleLoad" />
+        <ui:VisualElement style="margin-top: 5px;">
+            <ui:Toggle label="AutoLoadDependencies" name="AutoLoadDependencies" />
+        </ui:VisualElement>
         <ui:VisualElement style="flex-direction: row; flex-shrink: 0; padding-bottom: 5px;">
             <ui:Button text="Load Asset Bundle" name="LoadAssetBundle" style="width: 140px; margin-right: 10px;" />
             <ui:Button text="DumpAllShader" name="DumpAllShader" style="width: 100px;" />
