--- a/Editor/UI/UXML/AssetBundleFileItem.uxml
+++ b/Editor/UI/UXML/AssetBundleFileItem.uxml
@@ -1,9 +1,7 @@
-<ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements">
-    <ui:Foldout text="[AssetBundleName]" name="AssetBundleItem" style="overflow: visible;
- flex-direction: column;
- flex-wrap: nowrap;
- flex-shrink: 0;">
+<ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
+    <ui:Foldout text="[AssetBundlePath" name="AssetBundleItem" style="overflow: visible; flex-direction: column; flex-wrap: nowrap; flex-shrink: 0;">
         <ui:VisualElement name="Item">
+            <ui:Label text="AssetBundleName" display-tooltip-when-elided="true" name="AssetBundleName" />
             <ui:Label text="Load Objects" name="LoadObjecgts" />
             <ui:VisualElement name="LoadObjectBody" style="left: 10px;" />
             <ui:Label text="MaterialChange" name="MaterialChange" />
@@ -11,11 +9,5 @@
             <ui:Foldout text="Advanced" name="Advanced" style="left: 10px;" />
         </ui:VisualElement>
     </ui:Foldout>
-    <ui:Button text="x" name="CloseBtn" style="display: flex;
- visibility: visible;
- overflow: visible;
- position: absolute;
- top: 0;
- right: 7px;
- width: 22px;" />
+    <ui:Button text="x" name="CloseBtn" style="display: flex; visibility: visible; overflow: visible; position: absolute; top: 0; right: 7px; width: 22px;" />
 </ui:UXML>
