--- a/Editor/UI/UXML/AssetBundleChecker.uxml
+++ b/Editor/UI/UXML/AssetBundleChecker.uxml
@@ -1,19 +1,22 @@
-<ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements">
-    <ui:VisualElement style="flex-shrink: 0; margin-bottom: 10px;">
+<ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
+    <ui:VisualElement style="flex-shrink: 0; margin-bottom: 10px;">
         <ui:Label text="AssetBundleLoad" />
-        <ui:VisualElement style="margin-top: 5px;">
-            <ui:Toggle label="AutoLoadDependencies" name="AutoLoadDependencies" />
+        <ui:VisualElement name="CatalogSelectArea" style="margin-top: 5px; align-items: stretch; flex-direction: row;">
+            <ui:Label display-tooltip-when-elided="true" name="LoadedCatalogFile" />
+            <ui:Button text="Load Addressables Catalog" display-tooltip-when-elided="true" name="LoadCatalogBtn" />
         </ui:VisualElement>
-        <ui:VisualElement style="flex-direction: row; flex-shrink: 0; padding-bottom: 5px;">
-            <ui:Button text="Load Asset Bundle" name="LoadAssetBundle" style="width: 140px; margin-right: 10px;" />
+        <ui:Toggle label="AutoLoadDependencies" name="AutoLoadDependencies" />
+        <ui:VisualElement style="flex-direction: row; flex-shrink: 0; padding-bottom: 5px;">
+            <ui:Button text="Load Asset Bundle" name="LoadAssetBundle" style="width: 140px; margin-right: 10px;" />
             <ui:Button text="DumpAllShader" name="DumpAllShader" style="width: 100px;" />
-            <ui:Button text="UnloadAll" name="UnloadAll" style="width: 100px; margin-left: 40px;" />
+            <ui:Button text="UnloadAll" name="UnloadAll" style="width: 100px; margin-left: 40px;" />
         </ui:VisualElement>
     </ui:VisualElement>
-    <uie:Toolbar name="Header" style="flex-direction: row; flex-shrink: 0;">
+    <uie:Toolbar name="Header" style="flex-direction: row; flex-shrink: 0;">
         <uie:ToolbarButton text="Assets" name="Assets" />
         <uie:ToolbarButton text="Shaders" name="Shaders" />
         <uie:ToolbarButton text="ShaderVariants" name="ShaderVariants" />
+        <uie:ToolbarButton text="Addressable Catalog&#10;" name="AddressableCatalog" display-tooltip-when-elided="false" style="visibility: hidden; display: none;" />
     </uie:Toolbar>
-    <ui:VisualElement name="BodyItems" style="overflow: hidden;" />
+    <ui:VisualElement name="BodyItems" text="Addressable Catalog" style="overflow: hidden;" />
 </ui:UXML>
